Api rest ejemplo

--- a/clase13/index.html
+++ b/clase13/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: black;
+        }
+        .fa-user{
+            color: #FF0000;
+            font-size: 24px;
+        }
+        .fa-heart{
+            color: #FF5599;
+            font-size: 24px;
+        }
+        .fa-xl{
+            color: #FF5599;
+            font-size: 36px;
+        }
+    </style>
+    <script src="https://kit.fontawesome.com/af5577355e.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <i class="fas fa-user"></i>
+    <i class="fas fa-solid fa-filter fa-beat fa-xl" style="color: #0a51cd;"></i>
+    <i class="fas fa-heart"></i>
+    <i class="fas fa-file fa-flip fa-xl"></i>
+    <!-- <i src="https://fontawesome.com/icons/instagram?f=brands&s=solid"></i> -->
+    <!-- <img src="https://fontawesome.com/icons/instagram?f=brands&s=solid" alt=""> -->
+
     <!-- <div>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, dignissimos nobis temporibus incidunt error at maxime iste suscipit rerum praesentium reiciendis consequatur iusto ad. Provident quisquam corrupti inventore quod ab.</p>
         <p>
@@ -15,8 +40,11 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nobis in modi eum minus aut eos, repellendus voluptas autem iure ad quos qui laborum dolorum suscipit odit alias nemo fugiat?
         </p>
     </div> -->
-    <p id="provisional">...</p>
+    <!-- <p id="provisional">...</p> -->
+    <!-- <a id="enlace" href="http://www.google.com.ar">Enlace</a>
+    <img id="imagen" style="margin:0; border:0;" src="michi.jpg" /> -->
 
-    <script src="dom.js"></script>
+
+    <!-- <script src="dom.js"></script> -->
 </body>
 </html>
